[package]
name = "3des-hmac"
version = "0.1.0"
authors = ["lenerd <lenerd@localhost>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
askama = "0.8"
base64 = "0.10"
block-cipher-trait = "0.6"
des = "0.3"
generic-array = "0.12"
md5 = "0.6"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
url = "1.7.2"
